--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-  
 </head>
-
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press Button to Start</h1>
+  <button type="button" class="start-button">Start</button>
   <div class="container">
     <div lass="row">
 
